Revert "fix: vh spill #3"
This reverts commit 269ba9c11c69a95b20f437b0b63c6b7da3ef67d4.

--- a/gsc-frontend/src/index.css
+++ b/gsc-frontend/src/index.css
@@ -2,8 +2,3 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
-  min-height: -moz-available;
-}
